<resources>
    <string name="app_name">CrimeManagementApp</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="your_profile">Your Profile</string>
    <string name="todo">TODO</string>
    <string name="country">Country</string>
    <string name="view_profile">View Profile</string>
    <string name="report_a_crime">Report a Crime</string>
    <string name="welcome_to_the_app">WELCOME TO THE APP</string>
    <string name="user_dashboard">USER DASHBOARD</string>
    <string name="log_out">Log out</string>
    <string name="my_map_api_key">AIzaSyA2XPcKbCikqs57xN8CLe2mbeVZXP4OpdU</string>
</resources>