<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/profileCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profileCity"
        android:text="@string/country"
        android:textColor="#FFEB3B"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/profileimage"
        android:layout_width="174dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/yourprofile"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="128dp"
        android:src="@drawable/profile_image"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/yourprofile"
        android:layout_width="264dp"
        android:layout_height="62dp"
        android:layout_centerHorizontal="true"
        android:text="@string/your_profile"
        android:textColor="#EF0B0B"
        android:textSize="48sp" />


    <TextView
        android:id="@+id/profileName"
        android:layout_width="125dp"
        android:layout_height="33dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profileimage"
        android:text="@string/your_name"
        android:textColor="#FFEB3B"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:layout_below="@+id/profileName"
        android:layout_centerHorizontal="true"
        android:textColor="#FFEB3B"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/phone_number"
        android:layout_below="@+id/profileEmail"
        android:textColor="#FFEB3B"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profileCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_below="@+id/profilePhone"
        android:layout_centerHorizontal="true"
        android:textColor="#FFEB3B"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profileAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_below="@+id/profileCountry"
        android:layout_centerHorizontal="true"
        android:textColor="#FFEB3B"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="176dp"
        android:layout_height="56dp"
        android:text="@string/logout"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profileAddress"
        android:layout_marginTop="100dp"
        android:textSize="24sp"
        android:onClick="logout" />

</RelativeLayout>